# PPLEngine

./: .gitignore  Cargo.toml  PPLEngine.sln  README.md  file_id.diz
.github/workflows/: build.yml
CSharp/PPLD/: Program.cs
CSharp/UnitTests/: UnitTest1.cs
PPLD/: PPLEngine.csproj  Program.cs
PPLD/Decompiler/: Decompiler.Constants.cs  Decompiler.cs  Executable.cs  Obfuscator.cs
UnitTests/: UnitTests.csproj
doc/qwk/: CONFIG.TXT  CONTROL.TXT  FILENAME.TXT  MESSAGES.TXT  QMAIL.H  REP.TXT  qwke.txt
icy_board_engine/: Cargo.toml
icy_board_engine/src/: lib.rs  tests.rs
icy_board_engine/src/data/: ICBTEXT.toml
icy_board_engine/src/icy_board/: ICETEXT  bulletins.rs  bullettins.rs  commands.rs  conferences.rs  data.rs  file_areas.rs  group_list.rs  icb_config.rs  icb_text.rs  language.rs  menu.rs  messages.rs  mod.rs  output.rs  sec_levels.rs  security.rs  state.rs  statistics.rs  surveys.rs  text_messages.rs  user_base.rs  user_inf.rs  users.rs  xfer_protocols.rs
icy_board_engine/src/icy_board/pcb/: messages.rs  mod.rs  pcbconferences.rs  pcboard_data.rs  user_inf.rs  users.rs
icy_board_engine/src/icy_board/state/: functions.rs  mod.rs
icy_board_engine/src/test_data/: bool_function_value.ppe  bool_function_value.pps  bool_function_value2.pps  by_ref_parameter.pps  for_to_string.pps  local_variables.pps  push_pop_test.pps  recurse.pps  test_dim1.pps  test_dim_string_concat.pps  test_optext.pps
icy_board_engine/src/vm/: errors.rs  io.rs  mod.rs
icy_board_engine/src/vm/expressions/: mod.rs  predefined_functions.rs
icy_board_engine/src/vm/statements/: mod.rs  predefined_procedures.rs
icy_ppe/: Cargo.toml
icy_ppe/src/: PPE_fileformat.txt  crypt.rs  datetime.rs  executable.rs  lib.rs  tables.rs
icy_ppe/src/ast/: constant.rs  constants.py  declaration.rs  expression.rs  expression_depth_visitor.rs  function_implementation.rs  implementations.rs  mod.rs  negate_expression_visitor.rs  output_visitor.rs  program.rs  rename_visitor.rs  statement.rs  syntax_tree.rs  variable_type.rs  variable_value.rs  visitor.rs
icy_ppe/src/compiler/: ast_transform.rs  expr_compiler.rs  mod.rs  tests.rs
icy_ppe/src/compiler/test_data/: bool_check.pps  by_ref_parameter.pps  recurse.pps  sort.pps  test_constants.pps  use_funcs1.pps
icy_ppe/src/decompiler/: constant_scan_visitor.rs  evaluation_visitor.rs  mod.rs  reconstruct.rs  rename_visitor.rs  test_evaluation_visitor.rs
icy_ppe/src/executable/: commands.rs  deserializer.rs  disassembler.rs  exec.rs  expr_tests.rs  func_op_codes.rs  mod.rs  opcodes.rs  smt_op_codes.rs  stmt_tests.rs  variable_table.rs  variable_value.rs
icy_ppe/src/icy_board/: data.rs  mod.rs  state.rs  text_messages.rs  users.rs
icy_ppe/src/interpreter/: errors.rs  expressions.rs  io.rs  mod.rs  rename_vars_visitor.rs  statements.rs  tests.rs
icy_ppe/src/interpreter/expressions/: predefined_functions.rs
icy_ppe/src/interpreter/statements/: predefined_procedures.rs
icy_ppe/src/parser/: declaration_tests.rs  expr_tests.rs  expression.rs  lexer.rs  lexer_tests.rs  mod.rs  parser_tests.rs  statement_tests.rs  statements.rs  tokens.rs
icy_ppe/src/semantic/: find_references_tests.rs  mod.rs
icy_ppe/src/vm/: errors.rs  io.rs  mod.rs  tests.rs
icy_ppe/src/vm/expressions/: mod.rs  predefined_functions.rs
icy_ppe/src/vm/statements/: mod.rs  predefined_procedures.rs
icy_ppe/test_data/: asc.ppe  beep.pps  callid.ppe  callid.pps  callnum.pps  cdchkon.pps  chat.ppe  clreol.ppe  color.ppe  curcolor.pps  date.pps  declare_Function.ppe  declare_Function.pps  declare_procedure.pps  delay.pps  deluser.ppe  dir.ppe  disptext_bell_lfafter_lfbefore_logit_logitleft_newline.pps  dow.pps  dtroff.ppe  dtron.ppe  dtron.pps  exist.ppe  fclose.ppe  fclose.pps  fopen.ppe  forward.ppe  fput_fputln.ppe  fputpad.pps  getenv.ppe  gettoken.pps  grafmode.pps  helppath.ppe  highascii_make_ascii.pps  i2s.pps  if_else_loop_bug.pps  if_then.ppe  if_then_else.pps  inkey.ppe  instr.ppe  (+55 more)
ppl-lsp/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
ppl-lsp/client/: package.json
ppl-lsp/client/src/: extension.ts
ppl-lsp/data/: FUNCS  constants.py
ppl-lsp/examples/: index.rs
ppl-lsp/i18n/de/: ppl_language_server.ftl
ppl-lsp/i18n/en/: ppl_language_server.ftl
ppl-lsp/src/: completion.rs  jump_definition.rs  lib.rs  main.rs  reference.rs  semantic_token.rs
ppl-lsp/src/semantic/: find_references_tests.rs  mod.rs
pplc/: Cargo.toml
pplc/src/: executable.rs  main.rs  output.rs  tests.rs
pplc/test_data/: test_functions.pps  (+1 more)
ppld/: Cargo.toml
ppld/src/: main.rs  tests.rs
ppld/test_data/: 99bottles.pps  S2I.pps  abort.ppe  abort.pps  abs.pps  adjtime.ppe  ansipos.ppe  b2w.ppe  blt.pps  cdchkon.ppe  color.pps  curconf.pps  cursec.ppe  cursec.pps  date.ppe  day.ppe  dbglevel_func.ppe  dec.ppe  declare_Function.pps  defcolor.ppe  defcolor.pps  defcolor_func.pps  defs.pps  delete.ppe  delete.pps  dispfile_sec_graph_lang.ppe  dispfile_sec_graph_lang.pps  dispstr.ppe  disptext_bell_lfafter_lfbefore_logit_logitleft_newline.ppe  disptext_bell_lfafter_lfbefore_logit_logitleft_newline.pps  dointr.ppe  eraseline_inputstr.pps  f_exp_f_mw_f_reg_f_sel_f_sys.pps  fcl.pps  ferr.pps  fget.pps  fmtcc.ppe  fns.ppe  fns.pps  frewind.pps  (+95 more)
pplx/: Cargo.toml
pplx/src/: main.rs  output.rs
pplx/src/icy_board/: ICETEXT  mod.rs  text_messages.rs  users.rs
pplx/src/vm/: io.rs  mod.rs
pplx/src/vm/expressions/: mod.rs
pplx/src/vm/statements/: mod.rs  predefined_procedures.rs
src/: crypt.rs  decode.rs  decompiler.rs  executable.rs  interpreter.rs  lib.rs  main.rs  parser.rs  tables.rs
test_data/: 99bottles.ppe  99bottles.ppl  99bottles.pps  S2I.ppe  S2I.ppl  S2I.pps  abort.pps  abs.ppe  abs.ppl  abs.pps  adjtime.ppl  and.ppe  and.ppl  and.pps  ansipos.pps  asc.ppl  asc.pps  auto.ppe  auto.ppl  auto.pps  b2w.ppl  b2w.pps  backup.ppe  backup.ppl  beep.ppe  bell_lfafter_lfbefore.ppe  bell_lfafter_lfbefore.ppl  blt.ppe  boolean.ppe  boolean.ppl  broadcast.ppe  broadcast.ppl  bye.ppe  call.ppe  call.pps  callid.ppl  callid.pps  callnum.ppe  callnum.ppl  callnum.pps  (+357 more)
(+36 files in other folders)
