[package]
name = "ppl_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
argh = "0.1.7"
regex = "1.5.5"
substring = "1.4.5"
thiserror = "1.0.57"
ariadne = { version = "0.4.0", features = ["auto-color"] }
semver = "1.0.20"
logos = "0.14.0"

[dev-dependencies]
stopwatch = "0.0.7"
