[workspace]
members = ["icy_ppe", "ppld", "pplc", "pplx", "ppl-lsp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*