[package]
name = "icy_board_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_ppe = { path = "../icy_ppe" }
icy_engine = { git ="https://github.com/mkrueger/icy_engine" }
lazy_static = "1.4.0"
thiserror = "1.0.57"
log = "0.4.21"
unicase = "2.7.0"
crossterm = "0.27.0"
rand = "0.8"
radix_fmt = "1"
qfile = "3.0.1"
substring = "1.4.5"
byteorder = "1.5.0"
chrono = "0.4.37"
strum = "0.26.2"
strum_macros = "0.26.2"
toml = "0.8.12"
serde = "1.0.197"
relative-path = "1.9.2"

# interpreter deps
[dev-dependencies]
stopwatch = "0.0.7"
