[package]
name = "icy_ppe"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.57"
byteorder = "1.5.0"
log = "0.4.21"
unicase = "2.7.0"
crossterm = "0.27.0"

# interpreter deps
[dev-dependencies]
stopwatch = "0.0.7"
