[package]
name = "ppld"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
icy_ppe = { path = "../icy_ppe" }
argh = "0.1.7"
semver = "1.0.20"
thiserror = "1.0.57"
lazy_static = "1.4.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
crossterm = "0.27.0"

[profile.release]
strip = "symbols"