[package]
name = "pplx"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
icy_ppe = { path = "../icy_ppe" }
argh = "0.1.12"
semver = "1.0.20"
thiserror = "1.0.57"
lazy_static = "1.4.0"
crossterm = "0.27.0"
icy_engine = { git ="https://github.com/mkrueger/icy_engine" }
rand = "0.8"
unicase = "2.7.0"
radix_fmt = "1"
qfile = "3.0.1"
easy_reader = "0.5.2"
log = "0.4.21"
substring = "1.4.5"
